# matatabi

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Todo.md  build.rs  deny.toml  docker-compose-deprecated.yaml  docker-compose.yaml  fleet.toml  rust-toolchain.toml  sqlx-data.json
.cargo/: config.toml
migrations/: 202111100040_init.sql
protos/: cage.proto  salmon.proto  yarn.proto
src/: logger.rs  main.rs  postgres.rs
src/database/: mod.rs  mysql_database.rs  postgres_database.rs  transactable.rs
src/database/models/: affiliation_object.rs  channel_object.rs  id_object.rs  livers_object.rs  mod.rs  upcoming_object.rs  update_signature.rs
src/entities/: affiliation.rs
src/models/: affiliation.rs  channel.rs  error.rs  liver.rs  mod.rs  upcoming.rs
src/repository/: mod.rs
src/repository/__effectuation/: affiliation.rs  mod.rs
src/repository/adaptor/: affiliation.rs  mod.rs
src/repository/database/: affiliation.rs  mod.rs
src/repository/dto/: affiliation.rs  mod.rs
src/repository/interactor/: affiliation.rs  mod.rs
src/routes/: affiliation.rs  authenticate.rs  mod.rs  nf.rs  upcoming.rs
src/routing/: affiliation.rs  channel.rs  liver.rs  mod.rs  upcoming.rs
src/server/: actix.rs  auth.rs  axum.rs  mod.rs  salmon.rs  yarn.rs
src/server/layer/: cage.rs  mod.rs
src/server/middleware/: bearer.rs  cage_middleware.rs  mod.rs
