[package]
name = "matatabi"
version = "0.0.31-bleeding-edge"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.13"
actix-cors = "0.6.0-beta.4"
actix-ratelimit = "0.3.1"

serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"

juniper = "0.15.7"

tonic = { version = "0.6.1", features = ["tls", "compression"] }
prost = "0.9.0"
prost-types = "0.9.0"
futures = "0.3.18"
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-test = "0.4.2"

meilisearch-sdk = "0.11.0"
reqwest = { version = "0.11.6", features = ["json"] }
openssl = "0.10"

sqlx = { version = "0.5.9", features = ["runtime-tokio-native-tls", "postgres", "chrono", "offline", "macros", "migrate"] }

env_logger = "0.9.0"
dotenv = "0.15.0"
thiserror = "1.0.30"
yansi = "0.5.0"
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }

[build-dependencies]
tonic-build = { version = "0.6.0", features = ["prost", "compression"] }
